# abracadabra

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json
docs/: index.md
docs/bentobox/: 01-create-bentobox.md  02-create-total-accounts.md  03-create-balance-account.md  04-change-bentobox-authority.md  05-bentobox-whitelist.md  06-approve-master-contract.md  07-create-bentobox-authority-master-contract-approval.md  08-deposit.md  09-withdraw.md  10-transfer.md  11-flash-loan.md  12-set-strategy.md  13-harvest.md  14-save-harvest.md  15-convertion-amount-share.md
docs/cauldron/: 01-create-cauldron.md  02-create-total-account.md  03-create-user-balance-account.md  04-borrow.md
docs/full_diagram/: bentobox_cauldron_diagram.drawio
programs/bentobox/: Cargo.toml
programs/bentobox/src/: context.rs  error.rs  event.rs  lib.rs  state.rs  utils.rs
programs/cauldron/: Cargo.toml
programs/cauldron/src/: context.rs  error.rs  event.rs  lib.rs  state.rs  utils.rs
programs/strategy-mock/: Cargo.toml
programs/strategy-mock/src/: context.rs  error.rs  event.rs  lib.rs  state.rs
programs/strategy-mock/src/package/: errors.rs  lib.rs  mod.rs  state.rs
programs/swapper-orca/: Cargo.toml
programs/swapper-orca/src/: error.rs  lib.rs  utils.rs
programs/swapper-raydium/: Cargo.toml
programs/swapper-raydium/src/: context.rs  error.rs  lib.rs  state.rs  utils.rs
tests/: test.sh
tests/common/: bentobox.ts  bentobox_pda_helper.ts  cauldron.ts  cauldron_pda_helper.ts  common.ts  mock_strategy.ts  mock_strategy_pda_helper.ts
tests/common/src/: constants.ts
tests/common/src/instructions/: borrowFlashLoan.ts  index.ts  (+1 more)
tests/devnet/bentobox/: blockchain.ts  flash_loan.ts
tests/devnet/cauldron/: cauldron_liquidate.ts  cauldron_liquidate_and_orca_swap.ts  cauldron_liquidate_and_raydium_swap.ts
tests/localnet/bentobox/: bentobox_amount_share_parts.ts  bentobox_create.ts  bentobox_create_balance.ts  bentobox_create_vault.ts  bentobox_decimals_operations.ts  bentobox_deposit.ts  bentobox_harvest.ts  bentobox_ownership.ts  bentobox_safe_harvest.ts  bentobox_set_strategy.ts  bentobox_set_strategy_delay.ts  bentobox_set_strategy_loss.ts  bentobox_set_strategy_profit.ts  bentobox_strategy_data.ts  bentobox_to_share_to_amount.ts  bentobox_transfer.ts  bentobox_withdraw.ts
tests/localnet/cauldron/: cauldron_accrue.ts  cauldron_add_collateral.ts  cauldron_bento_deposit_withdraw.ts  cauldron_bento_transfer.ts  cauldron_borrow.ts  cauldron_borrow_flow.ts  cauldron_change_borrow_limit.ts  cauldron_change_interest_rate.ts  cauldron_create_total.ts  cauldron_create_user_balance.ts  cauldron_create_vault.ts  cauldron_get_repay_part.ts  cauldron_get_repay_share.ts  cauldron_init.ts  cauldron_is_valid_price.ts  cauldron_reduce_supply.ts  cauldron_remove_collateral.ts  cauldron_repay.ts  cauldron_repay_flow.ts  cauldron_set_fee_to_account.ts  cauldron_switchboard_price.ts  cauldron_transfer_and_remainings.ts  cauldron_two_users_repay_flow.ts  cauldron_update_switchboard_data_feed.ts  cauldron_withdraw_fee.ts
tests/localnet/mock-strategy/: mock_strategy_after_exit.ts  mock_strategy_initialize.ts  mock_strategy_set_executor.ts
tests/wallets/: devnet.json
tests/wallets/devnet_bentobox_keypair/: bentobox-keypair.json
tests/wallets/devnet_cauldron_keypair/: cauldron-keypair.json
tests/wallets/devnet_strategy_mock_keypair/: strategy_mock-keypair.json
tests/wallets/devnet_swapper_orca_keypair/: swapper_orca-keypair.json
tests/wallets/devnet_swapper_raydium_keypair/: swapper_raydium-keypair.json
(+1 files in other folders)
