[package]
name = "bentobox"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bentobox"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
devnet = []
localnet = []
mainnet-beta = []

[dependencies]
anchor-lang = { version="0.28.0", features=["init-if-needed"] }
anchor-spl = "0.28.0"
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
spl-math = { version = "0.1.0", features = ["no-entrypoint"]}
# spl-token-lending = { git = "https://github.com/solana-labs/solana-program-library", version = "0.2.0", features = ["no-entrypoint"] }

spl-token-lending = { version = "0.1.0", features = ["no-entrypoint"] }

# solana-program = "1.16"
common = { path = "../../packages/common", version= "0.1.0", features = ["library"]}
# bentobox-package = { path = "../../packages/bentobox", version= "0.1.0", features = ["library"]}
# strategy-package = { path = "../../packages/strategy", version= "0.1.0", features = ["library"]}

strategy-mock ={ path = "../strategy-mock",version = "0.1.0",features = ["cpi"]}
